--- a/index.html
+++ b/index.html
@@ -974,9 +974,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-334f00e1 elementor-widget elementor-widget-image"
 					data-id="334f00e1" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<img loading="lazy" decoding="async" width="800" height="798" src="shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp"
+						<img loading="lazy" decoding="async" width="800" height="798" src="logo shopee.webp"
 							class="attachment-large size-large wp-image-724" alt=""
-							srcset="shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 1024w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 300w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 150w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 768w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 600w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 100w, shopee-logo-shopee-icon-transparent-social-media-icons-free-png.webp 1083w"
+							srcset="logo shopee.webp"
 							sizes="(max-width: 800px) 100vw, 800px">
 					</div>
 				</div>
