--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-40de7163 elementor-widget elementor-widget-image"
 					data-id="40de7163" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<a href="https://pay.comprafinailizaagora.shop/NDr8gm4kbPOGBmj">
+						<a href="https://pay.comprafinailizaagora.shop/KV603kan9OmGw8y">
 							<img decoding="async" width="78" height="61" src="images/chat.png"
 								class="attachment-large size-large wp-image-38" alt=""> </a>
 					</div>
@@ -676,7 +676,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-224fbd elementor-widget elementor-widget-image"
 					data-id="224fbd" data-element_type="widget" data-widget_type="image.default">
 					<div class="elementor-widget-container">
-						<a href="https://pay.comprafinailizaagora.shop/NDr8gm4kbPOGBmj">
+						<a href="https://pay.comprafinailizaagora.shop/KV603kan9OmGw8y">
 							<img decoding="async" width="76" height="75" src="images/cart.png"
 								class="attachment-large size-large wp-image-37" alt=""> </a>
 					</div>
@@ -689,7 +689,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<div class="elementor-widget-container">
 						<div class="elementor-button-wrapper">
 							<a id="clickbotao" class="elementor-button elementor-button-link elementor-size-sm"
-								href="https://pay.comprafinailizaagora.shop/NDr8gm4kbPOGBmj">
+								href="https://pay.comprafinailizaagora.shop/KV603kan9OmGw8y">
 								<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar agora</span>
 								</span>
